<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_crime_photo"
        android:layout_width="@dimen/crime_photo_dimens"
        android:layout_height="@dimen/crime_photo_dimens"
        android:background="@android:color/darker_gray"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_crime_title_label"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_crime_camera"
        android:layout_width="@dimen/crime_photo_dimens"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_crime_photo" />

    <TextView
        android:id="@+id/tv_crime_title_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"
        app:layout_constraintLeft_toRightOf="@id/iv_crime_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_crime_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"
        app:layout_constraintLeft_toRightOf="@id/iv_crime_photo"
        app:layout_constraintTop_toBottomOf="@id/tv_crime_title_label" />

    <TextView
        android:id="@+id/tv_crime_details_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ib_crime_camera" />

    <Button
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_crime_details_label"
        tools:text="Wed June 16 15:16 EST 2020"></Button>

    <CheckBox
        android:id="@+id/cb_crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crime_date" />

    <Button
        android:id="@+id/btn_choose_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_choose_suspect"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_crime_solved" />

    <Button
        android:id="@+id/btn_send_crime_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send_crime_report"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_choose_suspect" />
</androidx.constraintlayout.widget.ConstraintLayout>