<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_item_crime"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/list_item_padding">

    <TextView
        android:id="@+id/tv_crime_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_crime_title"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_crime_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_crime_data"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_crime_title" />

    <Button
        android:id="@+id/btn_contact_police"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_contact_police"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_crime_data" />

    <ImageView
        android:id="@+id/iv_is_solved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:src="@drawable/ic_solved"
        app:layout_constraintBottom_toTopOf="@id/btn_contact_police"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>